[package]
name = "ecsr"
description = "ecsr is a tool that makes it easy to execute the ecs execute command"
authors = ["Yusuke Egami <egpersent@gmail.com>"]
license = "MIT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-ecs = "0.19.0"
clap = { version = "4.0", features = ["derive"] }
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
dirs = "4.0.0"
regex = "1.6.0"
tokio = { version = "1.21.2", features = ["full"] }

